<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estebanposada.medellinsites.cine1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:id="@+id/back1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="360sp"
            android:src="@drawable/procinal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1"
                android:autoLink="web"
                android:id="@+id/fbproc"
                android:onClick="bfbcin1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2"
                android:autoLink="web"
                android:id="@+id/wbpro"
                android:onClick="bwbcin1"/>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cine1info"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/red"
            android:textColorHighlight="@color/brown"
            android:textStyle="bold"/>
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapViewci1"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed1"
                android:id="@+id/pro1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed2"
                android:id="@+id/pro2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed3"
                android:id="@+id/pro3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed4"
                android:id="@+id/pro4"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
