<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estebanposada.medellinsites.cine3">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:id="@+id/back3"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/cine_colombia"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1"
                android:autoLink="web"
                android:id="@+id/fbcc"
                android:onClick="bfbcin3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2"
                android:autoLink="web"
                android:id="@+id/wbcc"
                android:onClick="bwbcin3"/>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="10sp"
            android:text="@string/cine3info"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/goldenrod"
            android:textColorHighlight="@color/brown"
            android:textStyle="bold"/>
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapViewci3"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed1"
                android:id="@+id/cc1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed2"
                android:id="@+id/cc2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed3"
                android:id="@+id/cc3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed4"
                android:id="@+id/cc4"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
