<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.estebanposada.medellinsites.rest2">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330sp"
            android:background="@drawable/remondongos">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/restaur2"
                android:textSize="25sp"
                android:textColor="@color/darkblue"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1"
                android:autoLink="web"
                android:id="@+id/fbmond"
                android:onClick="bfbres2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2"
                android:autoLink="web"
                android:id="@+id/wbmon"
                android:onClick="bwbre2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but3"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/rest2info"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/dodgerblue"
            android:textColorHighlight="@color/brown"
            android:textStyle="italic"/>
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapViewre2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed1"
                android:id="@+id/mond1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed2"
                android:id="@+id/mond2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed3"
                android:id="@+id/mond3"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
