<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estebanposada.medellinsites.rest1">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="330sp"
            android:background="@drawable/reran">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30sp"
                android:text="@string/restaur1"
                android:textSize="25sp"
                android:textColor="@color/darkblue"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1"
                android:autoLink="web"
                android:id="@+id/fbran"
                android:onClick="bfbres1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2"
                android:autoLink="web"
                android:id="@+id/wbran"
                android:onClick="bwbre1"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/rest1info"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/brown"
            android:textColorHighlight="@color/brown"
            android:textStyle="italic"/>
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapViewre1"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed1"
                android:id="@+id/ran1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed2"
                android:id="@+id/ran2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed3"
                android:id="@+id/ran3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed4"
                android:id="@+id/ran4"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>