<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estebanposada.medellinsites.cine2">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:id="@+id/back2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/royal_films"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but1"
                android:autoLink="web"
                android:id="@+id/fbrf"
                android:onClick="bfbcin2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/but2"
                android:autoLink="web"
                android:id="@+id/wbrf"
                android:onClick="bwbcin2"/>
        </LinearLayout>
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14sp"
            android:layout_marginBottom="10sp"
            android:text="@string/cine2info"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:textColorHighlight="@color/darkcyan"
            android:textStyle="bold"/>
        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapViewci2"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed1"
                android:id="@+id/rf1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed2"
                android:id="@+id/rf2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sed3"
                android:id="@+id/rf3"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
